--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                             (function() {
                                 var wf = document.createElement( 'script' );
-                                wf.src = 'http://ajax.googleapis.com/ajax/libs/webfont/1.5.3/webfont.js';
+                                wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.3/webfont.js';
                                 wf.type = 'text/javascript';
                                 wf.async = 'true';
                                 var s = document.getElementsByTagName( 'script' )[0];
@@ -709,7 +709,7 @@ var wc_add_to_cart_params = {"ajax_url":"\/mt_groomax\/wp-admin\/admin-ajax.php"
     </div>
   </nav>
 </header>
-<div class="theme_header_slider"><link href="http://fonts.googleapis.com/css18e9.css?family=Nunito:900%2C700" rel="stylesheet" property="stylesheet" type="text/css" media="all">
+<div class="theme_header_slider"><link href="https://fonts.googleapis.com/css18e9.css?family=Nunito:900%2C700" rel="stylesheet" property="stylesheet" type="text/css" media="all">
 
 		<script>var htmlDiv = document.getElementById("rs-plugin-settings-inline-css"); var htmlDivCss="";
 						if(htmlDiv) {
